--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analytics Property Setup</title>
     <link rel="stylesheet" href="/static/style.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -109,13 +110,13 @@
                                     <option>https://</option>
                                     <option>http://</option>
                                 </select>
-                                <input type="text" class="form-input" id="websiteUrl" value="www.mywebsite.com">
+                                <input type="text" class="form-input" id="domain" placeholder="yourdomain.com">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="form-label">Stream name</label>
-                            <input type="text" class="form-input" id="streamName" value="My Website">
+                            <input type="text" class="form-input" id="site_name" placeholder="My Website">
                         </div>
                     </div>
 
@@ -219,7 +220,6 @@
                 </div>
 
                 <div class="tabs">
-                    <button class="tab" id="tabBuilder">Install with a website builder or CMS</button>
                     <button class="tab active" id="tabManual">Install manually</button>
                 </div>
 
@@ -236,46 +236,7 @@
                             </svg>
                         </button>
                         <div class="code-block" id="GenTagForAccount">
-                            &lt;!-- Analytics tag (track.js) --&gt;
-                            &lt;script async src="https://analytics-imvks.azurewebsites.net/track.js"&gt;&lt;/script&gt;
                         </div>
-                    </div>
-                    <div class="test-section">
-                        <h3 class="test-title">Test your website (optional):</h3>
-                        <div class="test-input-group">
-                            <div class="test-input-wrapper">
-                                <svg class="check-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
-                                </svg>
-                                <input type="text" id="testUrl" value="https://mycalpharm.com/">
-                                <button class="clear-btn" id="clearUrlBtn">
-                                    <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
-                                    </svg>
-                                </button>
-                            </div>
-                            <button class="test-btn">Test</button>
-                        </div>
-                    </div>
-
-                    <div class="info-section">
-                        <h3 class="info-title">Use Google Tag Manager?</h3>
-                        <p class="info-text">
-                            For additional features including multiple tag management and enterprise workflows, install and manage with Google Tag Manager. 
-                            <a href="#">Learn more about Google Tag Manager</a>
-                        </p>
-                    </div>
-
-                    <div class="info-banner">
-                        <svg class="info-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-                        </svg>
-                        <div class="info-banner-content">
-                            <p class="info-banner-text">
-                                If you have end users in the European Economic Area (EEA), set up consent mode so that you can continue to benefit from ads personalization and measurement.
-                            </p>
-                        </div>
-                        <a href="#" class="info-banner-link">Get started</a>
                     </div>
                 </div>
             </div>
