--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,8 +17,8 @@
         </div>
         <div class="navbar-right">
             <div class="user-profile">
-                <div class="user-avatar">JD</div>
-                <span class="user-name">John Doe</span>
+                <img src="{{ user.picture }}" alt="Profile Picture" class="user-avatar" />
+                <span class="user-name">{{ user.name }}</span>
             </div>
         </div>
     </nav>
