--- a/templates/index.html
+++ b/templates/index.html
@@ -296,14 +296,11 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <div class="logo-icon">A</div>
+            <div class="logo-icon">V</div>
             <span>Analytics</span>
         </div>
         <div class="nav-links">
-            <a href="#">Features</a>
-            <a href="#">Pricing</a>
-            <a href="#">Docs</a>
-            <a href="#">Contact</a>
+            <a href="https://github.com/imvks786">Contact</a>
         </div>
     </nav>
 
@@ -373,10 +370,7 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="#">About</a>
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Help Center</a>
-                <a href="#">Contact</a>
+                <a href="https://github.com/imvks786">Contact</a>
             </div>
             <div class="footer-copyright">
                 © 2024 Analytics Dashboard. All rights reserved.
