--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
         <div class="navbar-right">
             <div class="user-profile">
                 <img src="{{ user.picture }}" alt="Profile Picture" class="user-avatar" />
-                <span class="user-name">{{ user.name }}</span>
+                <span class="user-name" data-id="{{ user.user_id }}">{{ user.name }}</span>
             </div>
         </div>
     </nav>
