--- a/templates/report.html
+++ b/templates/report.html
@@ -5,31 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Referrers Report</title>
     <link rel="stylesheet" href="/static/dashboard.css" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/navbar.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/sidebar.css" type="text/css">
 </head>
 <body>
     {% include "navbar.html" %}
 
     <div class="app-body">
-        <aside class="sidebar" id="sidebar" aria-hidden="false">
-            <div class="sidebar-top">
-                <div class="sidebar-brand">
-                    <div class="logo-icon">A</div>
-                    <div class="brand-text">Analytics</div>
-                </div>
-            </div>
-            <nav class="sidebar-nav">
-                <a class="nav-item" href="/dashboard">Overview</a>
-                <a class="nav-item" href="/dashboard">Realtime</a>
-                <a class="nav-item active" href="/reports/referrers">Reports</a>
-                <div class="nav-divider"></div>
-                <a class="nav-item" href="#">Audience</a>
-                <a class="nav-item" href="#">Acquisition</a>
-                <a class="nav-item" href="#">Behavior</a>
-                <a class="nav-item" href="#">Conversions</a>
-                <div class="nav-divider"></div>
-                <a class="nav-item" href="#">Settings</a>
-            </nav>
-        </aside>
+        {% include "sidebar.html" %}
 
         <main class="main-content" style="overflow: scroll;">
             <div class="header">
@@ -96,6 +80,8 @@
     </div>
 
     <script src="/static/dashboard.js"></script>
+    <script src="/static/js/navbar.js"></script>
+    <script src="/static/js/sidebar.js"></script>
 
     {% include "footer.html" %}
 </body>
