--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -14,7 +14,7 @@
             <span class="nav-text">Referrer</span>
         </a>
         <div class="nav-divider"></div>
-        <a class="nav-item" href="#">
+        <a class="nav-item" href="/audience">
             <span class="material-icons">people</span>
             <span class="nav-text">Audience</span>
         </a>
@@ -22,10 +22,18 @@
             <span class="material-icons">devices</span>
             <span class="nav-text">Tech Details</span>
         </a>
+        <a class="nav-item" href="/manage_rules">
+            <span class="material-icons">tune</span>
+            <span class="nav-text">Manage Rules</span>
+        </a>
+        <a class="nav-item" href="/rule_analysis">
+            <span class="material-icons">analytics</span>
+            <span class="nav-text">Rule Analysis</span>
+        </a>
         <div class="nav-divider"></div>
         <a class="nav-item" href="/settings">
             <span class="material-icons">settings</span>
-            <span class="nav-text">Settings</span>
+            <span class="nav-text">Admin</span>
         </a>
     </nav>
 </aside>
