--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,8 +2,8 @@
     <div class="navbar-left">
         <button id="sidebarToggle" class="sidebar-toggle" aria-label="Toggle sidebar">☰</button>
         <div class="logo">
-            <div class="logo-icon">A</div>
-            <span>Analytics</span>
+            <div class="logo-icon">Tk</div>
+            <span>TrackKit</span>
         </div>
     </div>
     <div class="navbar-right">
