--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
             <a href="#">Contact</a>
         </div>
         <div class="footer-copyright">
-            © 2024 Analytics Dashboard. All rights reserved.
+            © 2026 TrackKit Dashboard. All rights reserved.
         </div>
     </div>
 </footer>
