--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -13,6 +13,10 @@
             <span class="material-icons">link</span>
             <span class="nav-text">Referrer</span>
         </a>
+        <a class="nav-item" href="/reports/demographics">
+            <span class="material-icons">public</span>
+            <span class="nav-text">Demographics</span>
+        </a>
         <div class="nav-divider"></div>
         <a class="nav-item" href="/audience">
             <span class="material-icons">people</span>
